# rton-editor-legacy

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
scripts/: build-rton-editor-wasm.mjs
src/: App.tsx  active-editor-state.ts  batch-export.ts  byte-transform-worker.ts  editor-tabs.ts  editor-workspace.ts  export-actions.ts  file-import-actions.ts  format-worker.ts  hex-edit-actions.ts  loaded-file-items.ts  loaded-file-list-state.ts  main.tsx  panel-layout.ts  preferences.ts  rton-byte-inspector.ts  rton-codec.ts  rton-value-actions.ts  rton-value-analysis.ts  rton-value-editing.ts  rton-value-search.ts  rton-value.ts  sample.ts  styles.css  text-format-flow.ts  ui-classes.ts  worker-clients.ts
src/app/: RtonEditorShell.tsx  controller.ts  output-summary.ts
src/components/: AppStatusBar.tsx  AppToolbar.tsx  CodeEditor.tsx  DraggableToolbar.tsx  EditorStage.tsx  EditorTabStrip.tsx  FileListPanel.tsx  HexEditor.tsx  LoadedFilesTree.tsx  Panels.tsx  RightInspectorPanel.tsx  RtonInlineSelect.tsx  RtonValueInspector.tsx  keyboard-shortcuts.ts
src/domain/: format-conversion.ts  hex-byte-source.ts  rton-byte-inspector.ts  rton-codec.ts  rton-document.ts  rton-offset-map.ts  rton-text-locator.ts  rton-value-editing.ts
src/files/: batch-export.ts  file-export.ts  file-loading.ts  loaded-file-items.ts
src/hooks/: active-editor-state.ts  export-actions.ts  file-import-actions.ts  hex-edit-actions.ts  loaded-file-list-state.ts  rton-value-actions.ts  (+3 more)
wasm/: Cargo.toml
wasm/rton-editor-wasm/: Cargo.toml  LICENSE
(+25 files in other folders)
