[package]
name = "rton_editor_wasm"
version = "0.1.0"
edition = "2024"
description = "wasm-bindgen bridge for the RTON editor"
repository = "https://github.com/LambdaEd1th/rton-editor"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
serde_json = "1.0"
serde_rton = { git = "https://github.com/LambdaEd1th/serde_rton.git", tag = "v0.3.2" }
wasm-bindgen = "0.2"
